cs3310/Assignment 2/submission/test/fail/pgm8.java
//! (Expr) -- Expr must be boolean.


class pgm8{
    public static void main(String[] a){
        System.out.println(new somename().init(6));
    }
}

class somename {
    public int init(int size){
	int[] p3;
	boolean a;
	p3=new int[size];
        a = !(p3);
	return 0 ;
    }
   
}
